--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 /Python Web Basics/16_regular_exam/2-Python Web Basics Exam - 30 Oct 2022/car_collection/.idea
+/Python Web Basics/16_regular_exam/3-Python Web Basics Retake Exam - 19 April 2022/games_play/.idea
